[package]
name = "render-z"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.8.1"
rustc-hash = "1.1.0"
rayon = "1.7.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
maths-rs = { version = "0.2", features = ["short_types", "short_hand_constructors", "casts", "serde"] }
theframework = { path = "../theframework" }
lazy_static = "1.4.0"
rust-embed = { version = "6.4.0", default-features = true, features = ["include-exclude"] }
fontdue = "0.7.2"
png = "0.17.8"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

# When building for Xcode

# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]
